force-app/main/default/objects/ssot__WebSearchEngagement__dlm/fields/ssot__IsRecognizedBrowser__c.field-meta.xml
<CustomField>
    <fullName>ssot__IsRecognizedBrowser__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Recognized Browser</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>IsRecognizedBrowser</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Checkbox</type>
</CustomField>