force-app/main/default/objects/ssot__WebSearchEngagement__dlm/fields/ssot__rel_1729795242318_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1729795242318_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>WebSearchEngagement_PersonalizationC_rel</label>
    <referenceTo>ssot__PersonalizationLog__dlm</referenceTo>
    <relationshipLabel>WebSearchEngagement_PersonalizationC_rel</relationshipLabel>
    <relationshipName>rel_1729795242318_end</relationshipName>
    <type>Lookup</type>
</CustomField>