force-app/main/default/objects/ssot__WebSearchEngagement__dlm/fields/ssot__rel_1731040221268_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1731040221268_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>WebSearchEngagement_UtmId_map_Campai_rel</label>
    <referenceTo>ssot__Campaign__dlm</referenceTo>
    <relationshipLabel>WebSearchEngagement_UtmId_map_Campai_rel</relationshipLabel>
    <relationshipName>rel_1731040221268_end</relationshipName>
    <type>Lookup</type>
</CustomField>